[JAEGER] Convert result of division to integer if possible (bug 585272, r=dvander).