js/src/assembler/assembler/AbstractMacroAssembler.h
@@ -389,7 +389,7 @@ public:
 
         void link(AbstractMacroAssembler<AssemblerType>* masm)
         {
-            size_t size = m_jumps.size();
+            size_t size = m_jumps.length();
             for (size_t i = 0; i < size; ++i)
                 m_jumps[i].link(masm);
             m_jumps.clear();
@@ -397,7 +397,7 @@ public:
         
         void linkTo(Label label, AbstractMacroAssembler<AssemblerType>* masm)
         {
-            size_t size = m_jumps.size();
+            size_t size = m_jumps.length();
             for (size_t i = 0; i < size; ++i)
                 m_jumps[i].linkTo(label, masm);
             m_jumps.clear();
